ops/k8s/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fic-gig
  labels:
    name: fic-gig
