ops/k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: fic-gig
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: bitnami/redis
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 6379
          volumeMounts:
              - mountPath: /data
                name: redis-data
      volumes:
        - name: redis-data

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
